--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Shared Bookmarks</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <title>Shared Bookmarks</title>
-</head>
+  <body>
+    <h1>Shared Bookmarks</h1>
 
-<body>
-  <h1>Shared Bookmarks</h1>
+    <main>
+      <div class="container">
+        <div class="bookmark-list">
+          <div class="user-select-box">
+            <label for="user-selector">Select user:</label>
+            <select id="user-selector">
+              <option>Select the User</option>
+            </select>
+          </div>
+          <br />
+          <h2>User Bookmarks</h2>
+          <p class="empty-text">No bookmarks yet.</p>
+        </div>
 
-  <div class="container">
-    <div class="bookmark-list">
-      <div class="user-select-box">
-        <label for="user-selector">Select user:</label>
-        <select id="user-selector">
-          <option>Select the User</option>
-        </select>
+        <form id="book-form">
+          <h2>Add New Bookmark</h2>
+
+          <label for="title">Title</label>
+          <input type="text" id="title" placeholder="Enter the Title" />
+
+          <label for="url">URL</label>
+          <input type="text" id="url" placeholder="https://example.com" />
+
+          <label for="description">Description</label>
+          <input type="text" id="description" placeholder="Description" />
+
+          <button type="submit">Save Bookmark</button>
+        </form>
       </div>
-      <br />
-      <h2>User Bookmarks</h2>
-      <p class="empty-text">No bookmarks yet.</p>
-    </div>
-
-    <form id="book-form">
-      <h2>Add New Bookmark</h2>
-
-      <label for="title">Title</label>
-      <input type="text" id="title" placeholder="Enter the Title" />
-
-      <label for="url">URL</label>
-      <input type="text" id="url" placeholder="https://example.com" />
-
-      <label for="description">Description</label>
-      <input type="text" id="description" placeholder="Description" />
-
-      <button type="submit">Save Bookmark</button>
-    </form>
-  </div>
-  <script type="module" src="script.js"></script>
-</body>
-
+    </main>
+    <script type="module" src="script.js"></script>
+  </body>
 </html>
