some changes were done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="user-select-box">
         <label for="user-selector">Select user:</label>
         <select id="user-selector">
-          <option>Select the User</option>
+          <option value="">Select a user</option>
         </select>
       </div>
       <br />
